# parsedmarc

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Elastic_Parse_Emails.py  README.md  README.rst  SECURITY.md  api.html  build.sh  ci.ini  codecov.yml  contributing.html  dashboard-dev-bootstrap.sh  dashboard-dev-screenshots.py  davmail.html  dmarc.html  docker-compose.dashboard-dev.yml  docker-compose.yml  elasticsearch.html  genindex.html  index.html  installation.html  kibana.html  mailing-lists.html  makedocs.sh  mypy.ini  objects.inv  opensearch.html  output.html  parsedmarc.py  publish-docs.sh  py-modindex.html  pyproject.toml  (+9 more)
.claude/: settings.json
.claude/skills/verify/: SKILL.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: dashboards.yml  docker.yml  python-tests-3.6.yml  python-tests.yml  security-scans.yml  update-ipinfo-mmdb.yml  weekly-image.yml
_modules/: index.html  parsedmarc.html
_modules/elasticsearch_dsl/: field.html
_modules/parsedmarc/: elastic.html  opensearch.html  splunk.html  types.html  utils.html
_sources/: elasticsearch.md.txt  index.md.txt  index.rst.txt  installation.md.txt  kibana.md.txt  mailing-lists.md.txt  opensearch.md.txt  output.md.txt  usage.md.txt
_static/: documentation_options.js
dashboards/: README.md
dashboards/grafana/: Grafana-DMARC_Reports-PostgreSQL.json  Grafana-DMARC_Reports.json  Grafana-DMARC_Reports.json-new_panel.json  README.md
dashboards/kibana/: export.ndjson
dashboards/opensearch/: opensearch_dashboards.ndjson
dashboards/splunk/: README.rst  dmarc_aggregate_dashboard.xml  dmarc_failure_dashboard.xml  dmarc_forensic_dashboard.xml  smtp_tls_dashboard.xml
docs/: Makefile  conf.py  example.ini  index.rst  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: objects.inv  py-modindex.html  searchindex.js
docs/_build/html/_modules/parsedmarc/: elastic.html
docs/_build/html/_static/: documentation_options.js
docs/source/: api.md  conf.py  contributing.md  davmail.md  dmarc.md  elasticsearch.md  example.ini  google_secops.md  index.md  installation.md  kibana.md  mailing-lists.md  output.md  splunk.md  usage.md
docs/source/_templates/: placeholder
google_secops_parser/: README.md  parsedmarc.conf
grafana/: Grafana-DMARC_Reports-PostgreSQL.json  Grafana-DMARC_Reports.json  README.rst
html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
html/_modules/: index.html  parsedmarc.html
html/_sources/: index.rst.txt
kibana/: export.ndjson  kibana_saved_objects.json
opensearch/: opensearch_dashboards.ndjson
parsedmarc/: __init__.py  __version__.py  cli.py  constants.py  elastic.py  gelf.py  google_secops.py  gsecops.py  kafkaclient.py  log.py  loganalytics.py  opensearch.py  postgres.py  s3.py  splunk.py  syslog.py  types.py  utils.py  webhook.py
parsedmarc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
parsedmarc/mail/: __init__.py  gmail.py  graph.py  imap.py  mailbox_connection.py  maildir.py
parsedmarc/resources/dbip/: README.md
parsedmarc/resources/ipinfo/: README.md
parsedmarc/resources/maps/: AGENTS.md  README.md  base_reverse_dns_map.csv  base_reverse_dns_types.txt  classify_unknown_domains.py  collect_domain_info.py  detect_psl_overrides.py  detect_rebrands.py  find_bad_utf8.py  find_unknown_base_reverse_dns.py  find_unmapped_as_domains.py  known_unknown_base_reverse_dns.txt  psl_overrides.txt  sortlists.py  sortmaps.py
parsedmarc/resources/senders/: README.md  senders.sqlite  updatedb.py
samples/: estadocuenta1.infonacot.gob.mx!example.com!1536853302!1536939702!2940.xml.sample  example.net!example.com!1529366400!1529452799.xml.sample  ikea.com!example.de!1538690400!1538776800.xml.sample  ikea.com!xxxxxx.de!1538690400!1538776800.xml.sample  usssa.com!example.com!1538784000!1538870399.xml.sample
samples/aggregate/: !example.com!1538204542!1538463818.xml  !large-example.com!1711897200!1711983600.xml  Report domain- borschow.com Submitter- google.com Report-ID- 949348866075514174.eml  addisonfoods.com!example.com!1536105600!1536191999.xml  dmarcbis-example.net!example.com!1700000000!1700086399.xml  empty_reason.xml  invalid_utf_8.xml  invalid_xml.xml  mimecast-weird-gzip.eml  old_draft_from_wiki.xml  protection.outlook.com!example.com!1711756800!1711843200.xml  rfc9990-sample.xml  twilight.eml  veeam.com!example.com!1530133200!1530219600.xml  zoho.com!example.com!1581753600!1581840000.xml
samples/aggregate_invalid/: report_with_upper_cased_pass.xml
samples/extract_report/: changed-input.xml  nice-input.xml
samples/failure/: [Netease DMARC Failure Report] Rent Reminder.eml  dmarc_ruf_report_linkedin.crlf.eml  dmarc_ruf_report_linkedin.eml  exim_plain_text_only_no_arf_part.eml
samples/forensic/: DMARC Failure Report for domain.de (mail-from=sharepoint@domain.de, ip=10.10.10.10).eml  subject.eml
samples/smtp_tls/: google.com_smtp_tls_report.eml  mail.ru.json  rfc8460.json  smtp_tls.json
scripts/: build-weekly-image.sh
senders/: README.md  updatedb.py
splunk/: README.rst  dmarc_aggregate_dashboard.xml  dmarc_failure_dashboard.xml  dmarc_forensic_dashboard.xml  smtp_tls_dashboard.xml
tests/: test_cli.py  test_elastic.py  test_gelf.py  test_google_secops.py  test_gsecops.py  test_init.py  test_kafkaclient.py  test_loganalytics.py  test_maps.py  test_opensearch.py  test_postgres.py  test_s3.py  test_splunk.py  test_syslog.py  test_utils.py  test_webhook.py  tzutil.py
