[build-system]
requires = [
    "hatchling>=1.27.0",
]
requires_python = ">=3.9,<3.14"
build-backend = "hatchling.build"

[project]
name = "parsedmarc"
dynamic = [
    "version",
]
description = "A Python package and CLI for parsing aggregate and forensic DMARC reports"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Sean Whalen", email = "whalenster@gmail.com" },
]
keywords = [
    "DMARC",
    "parser",
    "reporting",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.9, <3.14"
dependencies = [
    "azure-identity>=1.8.0,<2.0.0",
    "azure-monitor-ingestion>=1.0.0,<2.0.0",
    "boto3>=1.16.63,<2.0.0",
    "dateparser>=1.1.1,<2.0.0",
    "dnspython>=2.0.0,<3.0.0",
    "elasticsearch-dsl==7.4.0",
    "elasticsearch<7.14.0",
    "expiringdict>=1.1.4,<2.0.0",
    "geoip2>=3.0.0,<5.0.0",
    "google-api-core>=2.4.0,<3.0.0",
    "google-api-python-client>=2.35.0,<3.0.0",
    "google-auth-httplib2>=0.1.0,<1.0.0",
    "google-auth-oauthlib>=0.4.6,<2.0.0",
    "google-auth>=2.3.3,<3.0.0",
    "imapclient>=2.1.0,<3.0.0",
    "kafka-python-ng>=2.2.2,<3.0.0",
    "lxml>=4.9.4,<6.0.0",
    "mailsuite>=1.9.18,<2.0.0",
    "msgraph-core==0.2.2",
    "opensearch-py>=2.4.2,<=3.0.0",
    "publicsuffixlist>=0.10.0,<2.0.0",
    "pygelf>=0.4.2,<1.0.0",
    "requests>=2.32.3,<3.0.0",
    "tqdm>=4.31.1,<5.0.0",
    "urllib3>=2.6.0,<3.0.0",
    "xmltodict>=0.12.0,<1.0.0",
    "PyYAML>=6.0.3,<7.0.0"
]

[project.optional-dependencies]
build = [
    "hatch>=1.14.0",
    "myst-parser[linkify]",
    "nose",
    "pytest",
    "pytest-cov",
    "ruff",
    "sphinx",
    "sphinx_rtd_theme",
]

[project.scripts]
parsedmarc = "parsedmarc.cli:_main"

[project.urls]
Homepage = "https://domainaware.github.io/parsedmarc"

[tool.hatch.version]
path = "parsedmarc/constants.py"

[tool.hatch.build.targets.sdist]
include = [
    "/parsedmarc",
]

[tool.hatch.build]
exclude = [
    "base_reverse_dns.csv",
    "find_bad_utf8.py",
    "find_unknown_base_reverse_dns.py",
    "unknown_base_reverse_dns.csv",
    "sortmaps.py",
    "README.md",
    "*.bak"
]
